package io.hexlet.java.m101.xo;

public class Figure {
    private final String figure;

    public Figure(final String figure) {
        this.figure = figure;
    }

    public String getFigure() {
        return figure;
    }
}
