@startuml
GameConsoleView o-- Game
Game o-- Player
GameConsoleView <|-- AdvGameConsoleView

class Player {
-Name: String
-Figure: String
+getPlayerName(): String
+getPlayerFigure(): String
}

class Game {
-players: Players[]
+currentPlayer(): Player
+move(x: int, y: int): boolean
+getGameName(): String
+getPlayers(): Player[]
}

class GameConsoleView {
-game: Game
+showGameName(): void
+showPlayersName(): void
}

class AdvGameConsoleView {
+showGameName(): void
}

class Board {
-figures: Figure[][]
+getFigure(position: int,position int): Figure
+setFigure(position: int,position int, figure: Figure): boolean
}

class Figure {
-figure: String
+getFigure(): String
}

@enduml